Read exported entries under the corpus file policy
The export read listed entries with Files.readAllBytes, which follows a
symbolic link out of the corpus and blocks in open() on a FIFO, so an
interrupted export could not exit. StoredEntry.read and corpus
validation now share CorpusLayout.readRegularFile: it rejects anything
but a regular file before opening and opens with NOFOLLOW_LINKS.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01RpBz1d4z33HKXhGquTMQkP